Prevent truck cuisine in vendor panel to cause text to overflow their boxes.

--- a/css/styles.less
+++ b/css/styles.less
@@ -341,6 +341,9 @@ header {
 				&.cuisine {
 					color: #777;
 					margin-top: 3px;
+					overflow: hidden;
+					white-space: nowrap;
+					text-overflow: ellipsis;
 				}
 				&.location {
 					margin-top: 10px;
